--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -97,3 +97,12 @@ body {
     background-color: #1a252f;
   }
   
+
+  .prioridade {
+    display: inline-block;
+    padding: 4px 10px;
+    border-radius: 12px;
+    font-weight: 700;
+    font-size: 14px;
+  }
+  
